[package]
name = "deserialise"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anchor-lang = "0.25.0"
anchor-syn = { version = "0.25.0", features = ["idl"] }
anyhow = "1.0.58"
flate2 = "1.0.24"
lambda_http = "0.5.2"
lambda_runtime = "0.5.1"
serde = "1.0.138"
serde_json = "1.0.82"
solana-client = "1.10.29"
solana-program = "1.10.29"
solana-sdk = "1.10.29"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }


